GNOME Bugzilla – Bug 723932
system status geolocation crosshair icon shown even though Maps not running
Last modified: 2014-04-05 11:58:35 UTC
Created attachment 268539 [details] Screenshot of the issue I'm using Fedora rawhide and I just updated to GNOME 3.11.5. The crosshair icon for geolocation is always in the system status menu and I don't have any geolocation things running.
Can you still reproduce this on 3.11.90? Are you running geoclue2 3.11.90 too?
I just upated my rawhide machine yeterday, and I am still seeing this issue: The icon is always in the top bar, and if I expand the system status menu it says "Location Off", and clicking "Turn On" closes the menu, but doesn't discernibly change anything. I have geoclue version 0.12.99.5.fc21, geoclue2 2.1.2-2.fc1 installed, and gnome-shell 3.11.90-4.fc21 installed. I have jhbuild set up on this machine, but idk how to run geoclue2 & gnome-shell from source in a way that they can communicate. Also, I tried removing geoclue, but then yum wanted me to also remove many other packages, so I declined.
This is also happening for me with gnome-shell-3.11.91 and geoclue2-2.1.6
Maps isn't the only thing that can use geolocation. Just to check - can you confirm that this always happens when all apps are closed? Also, it might be worth checking that automatic time zone is turned off (you can find this in the time and date settings).
This happens when all applications are closed. I'll try later today to see what happens with automatic time zone support turned off.
Its likely that this happens because the needed changes to 'auto tz update' hasn't made it to settings-daemon. Kalev?
Yes, it could be the the Automatic Time Zone functionality that's trying to do geolocation -- can you check if this is turned on or off in the Date & Time panel in System Settings? The way the Automatic Time Zones are implemented right now is that gnome-settings-daemon stays connected to the geoclue service all the time, and waits for it to notify for position changes. And this keeps the geolocation crosshair up in the system status menu.
Turned off Automatic Time Zone. The crosshair is still there - and it is also there even if I turn Location off from the system menu.
(In reply to comment #8) > Turned off Automatic Time Zone. The crosshair is still there - and it is also > there even if I turn Location off from the system menu. That part should now (geoclue git master) be fixed.
The rest needs to be fixed in g-s-d and I think we should aim for 3.12.1.
Created attachment 273482 [details] [review] datetime: Call geoclue's stop method when we no longer need it This makes sure the geolocation marker in gnome-shell's status area goes away after turning Automatic Time Zone off. Normally, geoclue would watch for the clients to disappear on the bus, but since we are using a shared singleton connection to the system bus in gnome-settings-daemon, other plugins can still keep the connection alive after we unref the dbus connection in the datetime plugin. To let geoclue know we no longer need it, explicitly call the DBus Stop method when stopping geolocation.
Review of attachment 273482 [details] [review]: Looks good. Please keep the commit shortlog under (or at least around) 50 chars as per conventions.
Attachment 273482 [details] pushed as 7ff2749 - datetime: Call geoclue's stop method when we no longer need it